# Grounded-Answer-Desk-Assignment

./: .env.example  .gitignore  01-grounded-answer-desk.html  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
agent/: SOUL.md
infra/: docker-compose.yml
infra/scripts/: setup-fastapi-service.sh  setup-mcp-service.sh  setup-nginx-https.sh
infra/systemd/: fastapi.service  mcp-server.service
ingestion/: ingest.py  verify.py
mcp_server/: embedder.py  server.py  spot_check.py  test_client.py
