[project]
name = "grounded-answer-desk-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.1",
    "einops>=0.8.0",
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.8.0",
    "mcp>=1.2.0",
]
